@@ -1,3 +1,10 @@
+2002-10-28  Don Porter  <dgp@users.sourceforge.net>
+
+	* library/auto.tcl:	Converted the Mac-specific [package unknown]
+	* library/init.tcl:	behavior to use a chaining mechanism to extend
+	* library/package.tcl:	the default [tclPkgUnknown].  [Bug 627660]
+	* library/tclIndex:	[Patch 624509] (steffen)
+
 2002-10-26  David Gravereaux <davygrvy@pobox.com>
 
 	* win/makefile.vc: xcopy on NT 4.0 doesn't support the /Y switch
